<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.leonkoth</groupId>
    <artifactId>blockparty-parent</artifactId>
    <version>3.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>BlockParty</name>

    <modules>
        <module>api</module>
        <module>utils</module>
        <module>core</module>
        <module>spigot_v1_20_R1</module>
        <module>spigot_v1_21_R1</module>
        <module>expansion</module>
        <module>dist</module>
    </modules>

    <properties>
        <lombok.version>1.18.38</lombok.version>
        <spigot.version>1.20.6-R0.1-SNAPSHOT</spigot.version>
        <jetty.version>9.4.57.v20241219</jetty.version>
        <java-websocket.version>1.6.0</java-websocket.version>
        <bstats.version>3.1.0</bstats.version>
        <timocloud.version>6.7.9</timocloud.version>
        <placeholderapi.version>2.12.2</placeholderapi.version>
        <!-- Explicit property avoids ${project.version} resolving to expansion's 1.0.3 -->
        <blockparty.version>3.0.0-SNAPSHOT</blockparty.version>
    </properties>

    <repositories>
        <repository>
            <id>spigot</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
            <snapshots><enabled>true</enabled></snapshots>
            <releases><enabled>false</enabled></releases>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <!-- Spigot API (default version; version-specific modules override) -->
            <dependency>
                <groupId>org.spigotmc</groupId>
                <artifactId>spigot-api</artifactId>
                <version>${spigot.version}</version>
                <scope>provided</scope>
            </dependency>

            <!-- Jetty uber JAR -->
            <dependency>
                <groupId>org.eclipse.jetty.aggregate</groupId>
                <artifactId>jetty-all</artifactId>
                <version>${jetty.version}</version>
                <classifier>uber</classifier>
                <scope>compile</scope>
            </dependency>

            <!-- Java-WebSocket -->
            <dependency>
                <groupId>org.java-websocket</groupId>
                <artifactId>Java-WebSocket</artifactId>
                <version>${java-websocket.version}</version>
                <scope>provided</scope>
            </dependency>

            <!-- bStats -->
            <dependency>
                <groupId>org.bstats</groupId>
                <artifactId>bstats-bukkit</artifactId>
                <version>${bstats.version}</version>
                <scope>compile</scope>
            </dependency>

            <!-- Null-safety annotations -->
            <dependency>
                <groupId>com.google.code.findbugs</groupId>
                <artifactId>jsr305</artifactId>
                <version>3.0.2</version>
                <scope>provided</scope>
            </dependency>

            <!-- TimoCloud -->
            <dependency>
                <groupId>cloud.timo.timocloud</groupId>
                <artifactId>TimoCloud-API</artifactId>
                <version>${timocloud.version}</version>
                <scope>provided</scope>
            </dependency>

            <!-- PlaceholderAPI -->
            <dependency>
                <groupId>me.clip</groupId>
                <artifactId>placeholderapi</artifactId>
                <version>${placeholderapi.version}</version>
                <scope>provided</scope>
            </dependency>

            <!-- MCJukebox -->
            <dependency>
                <groupId>com.github.oliverdunk</groupId>
                <artifactId>JukeboxAPI</artifactId>
                <version>v2.5.3</version>
                <scope>provided</scope>
            </dependency>

            <!-- NoteBlockAPI -->
            <dependency>
                <groupId>com.github.koca2000</groupId>
                <artifactId>NoteBlockAPI</artifactId>
                <version>1.6.1</version>
                <scope>provided</scope>
            </dependency>

            <!-- Internal modules -->
            <dependency>
                <groupId>de.leonkoth</groupId>
                <artifactId>blockparty-api</artifactId>
                <version>${blockparty.version}</version>
            </dependency>
            <dependency>
                <groupId>de.leonkoth</groupId>
                <artifactId>blockparty-utils</artifactId>
                <version>${blockparty.version}</version>
            </dependency>
            <dependency>
                <groupId>de.leonkoth</groupId>
                <artifactId>blockparty-core</artifactId>
                <version>${blockparty.version}</version>
            </dependency>
            <dependency>
                <groupId>de.leonkoth</groupId>
                <artifactId>blockparty-spigot_v1_20_R1</artifactId>
                <version>${blockparty.version}</version>
            </dependency>
            <dependency>
                <groupId>de.leonkoth</groupId>
                <artifactId>blockparty-spigot_v1_21_R1</artifactId>
                <version>${blockparty.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Lombok inherited by all modules -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <release>21</release>
                        <encoding>UTF-8</encoding>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.6.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.5.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
